# curve-dao-operations

./: README.md  ape-config.yaml  package-lock.json  pylintrc  pyproject.toml  requirements-complete.txt  requirements.txt
.github/workflows/: main.yaml
contracts/aragon_interfaces/: Voting_vyper.json
curve_dao/: __init__.py  addresses.py  contract.py  decoder_utils.py  etherscan.py  exceptions.py  ipfs.py  simulate.py  vote_utils.py
curve_dao/actions/: community_fund.py  kill_gauge.py  whitelist.py
curve_dao/scripts/: decode.py  decode_vote.py  set_vote.py
scripts/: decode.py  decode_executable.py  parameter_change_votes.py  set_vote.py
tests/: test_community_fund.py  test_kill_gauge.py  test_parameter.py  test_pegkeeper_debt_ceiling.py  test_whitelist.py
