[project]
name = "curve_dao"
version = "0.0.1"
description = "CLI tools for the Curve DAO"
license = { file = "LICENSE" }
readme = "README.md"
# authors = [
#     {name = "Curve DAO", email = "help@curvedao.org"},
# ]
# maintainers = [
#   {name = "fiddy", email = ""},
#   {name = "chanho", email = "chanho@curveresearch.org"}
# ]
requires-python = ">=3.10"

keywords = [
    "ethereum",
    "evm",
    "smart contract",
    "development",
    "dao",
    "curve finance",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Framework :: Ape",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


# Requirements
dependencies = [
    "eth-ape>=0.5.2",
    "ape-hardhat>=0.5.1",
    "ape-alchemy>=0.5.0",
    "ape-solidity>=0.5.0",
    "ape-vyper>=0.5.0",
    "ape-ledger>=0.5.0",
    "ape-etherscan>=0.5.1",
    "black",
    "pytest",
    "requests",
]

[project.urls]
Documentation = "https://curve-dao-operations.readthedocs.io"
Repository = "https://github.com/curvefi/curve-dao-operations.git"
Tracker = "https://github.com/curvefi/curve-dao-operations/issues"
Changelog = "https://github.com/curvefi/curve-dao-operations/CHANGELOG.md"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["curve_dao*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
