[project]
name = "curve_dao"
version = "0.0.1"
description = "CLI tools for the Curve DAO"
license = { file = "LICENSE" }
readme = "README.md"
# authors = [
#     {name = "Curve DAO", email = "help@curvedao.org"},
# ]
# maintainers = [
#   {name = "fiddy", email = ""},
#   {name = "chanho", email = "chanho@curveresearch.org"}
# ]
requires-python = ">=3.10"

keywords = [
    "ethereum",
    "evm",
    "smart contract",
    "development",
    "dao",
    "curve finance",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Framework :: Ape",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


# Requirements
dependencies = [
    "eth-ape[recommended-plugins]>=0.6.19",
    "black",
    "pytest",
    "requests",
]

[project.scripts]
decode = "curve_dao.scripts.decode:cli"

[project.urls]
Documentation = "https://curve-dao-operations.readthedocs.io"
Repository = "https://github.com/curvefi/curve-dao-operations.git"
Tracker = "https://github.com/curvefi/curve-dao-operations/issues"
Changelog = "https://github.com/curvefi/curve-dao-operations/CHANGELOG.md"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["curve_dao*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
